# adas_spbu

./: .gitignore  AUDI_methods.py  CMakeLists.txt  Custom_GA.py  LICENCE.md  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: tree-hyperopt.yml
DecisionTrees/: README.md  requirements.txt
DecisionTrees/adas/lib/: feature_generation.py
DecisionTrees/adas/lib/algorithms/: __init__.py  angle.py  canny.py  hough_lines.py
DecisionTrees/adas/lib/data/: __init__.py  bdd.py  biped.py  cityscapes.py  kitti.py  utils.py
DecisionTrees/adas/lib/metrics/edge_detection/: __init__.py  implementations.py  interface.py
DecisionTrees/core/: __init__.py
DecisionTrees/core/examples/: genetic.py  hyperopt.py  reinforce.py
DecisionTrees/core/lib/: better_abc.py  decision_tree.py  description.py  environment.py
DecisionTrees/core/lib/learners/: bb_learner.py  interface.py
DecisionTrees/core/lib/learners/genetic/: __init__.py  crossover.py  individual.py  train.py  wrapper.py
DecisionTrees/core/lib/learners/hyperopt/: __init__.py  wrapper.py
DecisionTrees/core/lib/learners/reinforce/: __init__.py  inference.py  model.py  train.py  wrapper.py
DecisionTrees/core/test/: test_description.py  utils.py
DecisionTrees/core/test/learners/genetic/: test_individual.py
DecisionTrees/core/test/learners/reinforce/: test_model.py  test_train.py  test_train_utils.py
DecisionTrees/cpp_utils/lib/: env.cpp  env.hpp  tree.cpp  tree.hpp
DecisionTrees/cpp_utils/test/: CMakeLists.txt  sum_env.cpp
DecisionTrees/foreign/: __init__.py
DecisionTrees/foreign/examples/: sum_env.py
DecisionTrees/foreign/lib/: foreign_env.py
GeneticAlgorithm/: Custom_GA.py
PedestrianTracking/: CMakeLists.txt  README.md  base64.cpp  base64.h  main.cpp
PedestrianTracking/UI/: mainwindow.cpp  mainwindow.h  mainwindow.ui
PedestrianTracking/trackers/: CSRTTracker.cpp  CSRTTracker.h  GOTURNTracker.cpp  GOTURNTracker.h  KCFTracker.cpp  KCFTracker.h  MyTracker.cpp  MyTracker.h  OpticalFlowTracker.cpp  OpticalFlowTracker.h  TLDTracker.cpp  TLDTracker.h  Tracker.h  TrackerPattern.cpp  TrackerPattern.h  constsForOpticalFlow.h
VisibilityEstimator/: CMakeLists.txt
VisibilityEstimator/src/: contourDetector.cpp  contourDetector.h  contourDrawer.cpp  contourDrawer.h  contourMerger.cpp  contourMerger.h  contourOrdering.cpp  contourOrdering.h  distanceEstimator.cpp  distanceEstimator.h  edgeDetector.cpp  edgeDetector.h  imageFilter.cpp  imageFilter.h  inversePerspectiveMapping.cpp  inversePerspectiveMapping.h  main.cpp
trackers/: CSRTTracker.cpp  CSRTTracker.h  OpticalFlowTracker.h
traffic_signs_detection/traffic_signs_detection/: CMakeLists.txt  Dockerfile  README.md  base64.cpp  base64.h  detectorPolygons.cpp  detectorPolygons.h  imageSegmentation.cpp  imageSegmentation.h  main.cpp  trafficSign.cpp  trafficSign.h
